--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           <div class="redondo ml-4" id="redondo4"  >aaa</div> 
    <div class="redondo ml-4" id="redondo5"  >aaa</div> 
     <div class="redondo ml-4" id="redondo6"  >aaa</div> 
-  
+    <div class="redondo ml-4" id="redondo7"  >aaa</div>
+         <div class="redondo ml-4" id="redondo8"  >aaa</div>
     </div>
   
        <!---redondo5----- --fin botones--- ------------> 
